--- a/2DTestProject/Assembly-CSharp.Player.csproj
+++ b/2DTestProject/Assembly-CSharp.Player.csproj
@@ -60,6 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerAnimation.cs" />
+    <Compile Include="Assets\Scripts\LandFX\JumpFX.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
